prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/50k_paren_brackets.diag.txt
ERROR: AST too big. Consider simplifying it
testData/diagnostics/50k_paren_brackets.nut:1:35

(((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((
                                   ^
(((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((


